--- a/newcss.css
+++ b/newcss.css
@@ -163,7 +163,9 @@ input[type-text]{
     background-color: #3cbc8d;
         color:white;
 }
-
+body {
+	height: 100%;
+}
 body {
 	margin: 0;
 	background: linear-gradient(45deg, #49a09d, #5f2c82);
