--- a/newcss.css
+++ b/newcss.css
@@ -132,6 +132,16 @@ h1 {
   display: table;
   clear: both;
 }
+input[type=submit] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  cursor: pointer;
+}
+input[type=submit]:hover {
+  background-color: #45a049;
+}
 
 /* Content */
 .content {
